[tool.poetry]
name = "ds-ml-notes"
version = "0.1.0"
description = ""
authors = ["Alan Gardner <urfolomeus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
